Allow skipping watermarking when creating pattern

--- a/frontend/src/app/modules/admin/modules/patterns/pages/create/create.page.html
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/create/create.page.html
@@ -91,8 +91,15 @@
     @if (imageUploadActive$ | async) {
       <app-image-upload [multiple]="true"
                         [desiredWidth]="1024"
+                        [watermark]="watermark$ | async"
                         (uploaded)="onImagesUploaded($event)">
       </app-image-upload>
+      <div>
+        <app-checkbox label="Wasserzeichen hinzufügen"
+                      [checked]="watermark$ | async"
+                      (checkedChanges)="onWatermarkChanged($event)">
+        </app-checkbox>
+      </div>
     } @else {
       <div class="add-image-button-container">
         <app-button (click)="activateImageUpload()">
