--- a/frontend/src/app/modules/catalog/modules/patterns/pages/patterns/patterns.page.scss
+++ b/frontend/src/app/modules/catalog/modules/patterns/pages/patterns/patterns.page.scss
@@ -11,3 +11,21 @@
   padding: 8px;
   text-align: center;
 }
+
+.pattern-item {
+  width: 100%;
+  height: 100%;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    aspect-ratio: 3/4;
+    transition: transform 0.1s ease-out;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
