Added some landing pages

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -51,4 +51,5 @@
 <ng-template #links>
   <app-button routerLink="/catalog/patterns" routerLinkActive="active">Schnitte</app-button>
   <app-button routerLink="/catalog/fabrics" routerLinkActive="active">Stoffe</app-button>
+  <app-button routerLink="/contact" routerLinkActive="active">Kontakt</app-button>
 </ng-template>
