--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -22,6 +22,13 @@
     </ul>
   </div>
 
+  <div class="other">
+    <div class="navigation-title">Sonstiges</div>
+    <ul class="navigation">
+      <li><a routerLink="/contact">Kontakt</a></li>
+    </ul>
+  </div>
+
   @if (showHiddenThings$ | async) {
     <div class="admin">
       <div class="navigation-title">Verwaltung</div>
