Fixed landing pages

--- a/frontend/src/app/modules/landing/modules/tradition/pages/tradition/tradition.page.html
+++ b/frontend/src/app/modules/landing/modules/tradition/pages/tradition/tradition.page.html
@@ -1,14 +1,20 @@
 <h1>Bayerische Tracht für kleine Herzen – Traditionell und hochwertig, handgemacht in Bayern</h1>
 
 <p>
-  Verkleiden Sie Ihr Kind in die schönsten Trachten!
-  Warum nicht auch die Kleinsten in traditioneller bayerischer Tracht kleiden?
+  Traditionelle Tracht mit einem bequemen Twist? Gerade für unsere Kleinsten ist Bewegungsfreiheit und Bequemlichkeit
+  ein absolutes Muss. Um diese zu garantieren kombinieren wir wunderschöne moderne Schnitte mit weichen dehnbaren
+  Stoffen. So wird euer Mini-Me beim nächsten Volksfest der Hit! 😉
 </p>
 
 <ul>
-  <li><strong>Handgemacht aus Bayern:</strong> Wir stellen jedes Kleidungsstück in Handarbeit her - und das direkt in Bayern!</li>
-  <li><strong>Individuell:</strong> Jedes Kleidungsstück wird mit viel Liebe zum Detail gefertigt. In einem persönlichen Gespräch - schriftlich oder telefonisch - kreieren wir das perfekte Unikat</li>
-  <li><strong>Qualität:</strong> Wir verwenden nur die besten Stoffe und Materialien. Weil unsere Kinder das wert sind.</li>
+  <li><strong>Handgemacht aus Bayern:</strong> Wir stellen jedes Kleidungsstück in Handarbeit her - und das direkt in
+    Bayern!
+  </li>
+  <li><strong>Individuell:</strong> Jedes Kleidungsstück wird mit viel Liebe zum Detail gefertigt. In einem persönlichen
+    Gespräch - schriftlich oder telefonisch - kreieren wir das perfekte Unikat
+  </li>
+  <li><strong>Qualität:</strong> Wir verwenden nur die besten Stoffe und Materialien. Weil unsere Kinder das wert sind.
+  </li>
 </ul>
 
 <div class="contact-wrapper">
