--- a/frontend/src/app/modules/landing/modules/wedding/pages/wedding/wedding.page.html
+++ b/frontend/src/app/modules/landing/modules/wedding/pages/wedding/wedding.page.html
@@ -1,16 +1,18 @@
 <h1>Kleine Gäste, großer Auftritt: Kinder- und Babykleidung für Hochzeiten und besondere Anlässe</h1>
 
 <p>
-  Kinder und Babys sind auf Hochzeiten immer ein Highlight.
-  Es sind die kleinen Gäste, die für viel Freude und Abwechslung sorgen.
-  Damit sie sich auch wohlfühlen und in die Umgebung einpassen, finden Sie hier die richtige Auswahl an <a
-  href="/catalog/patterns">Schnitten</a> und <a href="/catalog/fabrics">Stoffen</a> aus denen wir Ihnen handgemachte Unikate zaubern.
+  Willkommen in der zauberhaften Welt unserer handgefertigten Baby- und Kinderkleidung, die speziell für festliche
+  Anlässe und Hochzeiten entworfen wird! Jedes Stück wird auf Wunsch und nach Ihren individuellen Vorstellungen
+  gefertigt, sodass Ihr kleiner Liebling in einem einzigartigen Outfit erstrahlen kann. Unsere Outfits kombinieren
+  hochwertige Materialien mit liebevollen Details, die nicht nur wunderschön aussehen, sondern auch höchsten
+  Tragekomfort bieten. Für die süße Blumenmädchen-Rolle eignen sich ganz besonders unsere wunderschönen <a
+  href="/catalog/fabrics">floralen Stoffe</a>.
 </p>
 
-<p>
-  Wir verstehen, dass es nicht immer einfach ist, die richtige Kleidung für Kinder und Babys zu finden.
-  Deshalb bieten wir Ihnen auch die Möglichkeit persönlich mit uns in Kontakt zu treten, um das perfekte Outfit für Ihre
-  Kleinen zu finden.
+<p>Lassen Sie sich von unseren kreativen Möglichkeiten inspirieren und machen Sie jeden festlichen Anlass zu einem
+  unvergesslichen Erlebnis. Mit unserer handgemachten Kinderkleidung wird Ihr Kind zum Blickfang – perfekt für
+  Hochzeiten, Taufen oder Familienfeiern. Entdecken Sie die Magie von individuell gestalteter Mode und schenken Sie
+  Ihrem Kind unvergessliche Momente in bezaubernder und bequemer Kleidung!
 </p>
 
 <div class="contact-wrapper">
