Added meta descriptions

--- a/frontend/src/app/modules/landing/modules/tradition/pages/tradition/tradition.page.html
+++ b/frontend/src/app/modules/landing/modules/tradition/pages/tradition/tradition.page.html
@@ -2,8 +2,8 @@
 
 <p>
   Traditionelle Tracht mit einem bequemen Twist? Gerade für unsere Kleinsten ist Bewegungsfreiheit und Bequemlichkeit
-  ein absolutes Muss. Um diese zu garantieren kombinieren wir wunderschöne moderne Schnitte mit weichen dehnbaren
-  Stoffen. So wird euer Mini-Me beim nächsten Volksfest der Hit! 😉
+  ein absolutes Muss. Um diese zu garantieren, kombinieren wir wunderschöne moderne Schnitte mit weichen dehnbaren
+  Stoffen. So wird euer Mini-Me beim nächsten Volksfest der Hit!
 </p>
 
 <ul>
