--- a/frontend/src/app/modules/landing/modules/wedding/pages/wedding/wedding.page.scss
+++ b/frontend/src/app/modules/landing/modules/wedding/pages/wedding/wedding.page.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 
 .image {
