Minor UX improvements

--- a/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.scss
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.scss
@@ -53,6 +53,13 @@ ul.patterns-list {
       }
     }
 
+    .description {
+      display: flex;
+      flex-direction: row;
+      gap: 8px;
+      align-items: center;
+    }
+
     &:hover {
       background-color: var(--background-low-contrast);
     }
