--- a/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.html
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.html
@@ -48,8 +48,15 @@
                 <span class="category-badge">{{ getCategoryLabel(category) | async }}</span>
               }
             </span>
-            <span class="created-at">
-              Erstellt am {{ pattern.createdAt | date: 'dd.MM.yyyy' }} um {{ pattern.createdAt | date: 'HH:mm' }} Uhr
+            <span class="description">
+              <span class="created-at">
+                Erstellt am {{ pattern.createdAt | date: 'dd.MM.yyyy' }} um {{ pattern.createdAt | date: 'HH:mm' }} Uhr
+              </span>
+              @if (!pattern.published) {
+                <span class="material-icons" title="Nicht veröffentlicht">
+                  visibility_off
+                </span>
+              }
             </span>
           </span>
           </li>
