--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -132,3 +132,9 @@ input[type="password"] {
   justify-content: center;
   gap: 8px;
 }
+
+.ql-editor {
+  font-family: Lexend, sans-serif;
+  font-size: 16px;
+  padding: 0 !important;
+}
