--- a/frontend/src/app/modules/admin/modules/patterns/pages/pattern/pattern.page.scss
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/pattern/pattern.page.scss
@@ -7,6 +7,14 @@
   color: rgba(var(--text-rgb), 0.7);
 }
 
+.editor-wrapper {
+  width: 100%;
+  padding: 12px 16px;
+  background-color: white;
+  border-radius: 12px;
+  box-sizing: border-box;
+}
+
 .error {
   color: var(--red);
 }
@@ -32,7 +40,7 @@
     display: flex;
     flex-direction: row;
     gap: 12px;
-    align-items: center;
+    align-items: end;
   }
 }
 
@@ -140,6 +148,13 @@ ul.image-list {
 
     li {
       flex-basis: 100%;
+    }
+  }
+
+  .form-field {
+    & > .form-field-content {
+      flex-direction: column;
+      align-items: stretch;
     }
   }
 }
