--- a/frontend/src/app/modules/contact/pages/contact/contact.page.html
+++ b/frontend/src/app/modules/contact/pages/contact/contact.page.html
@@ -1,31 +1,35 @@
 <h1>Kontakt</h1>
 
-<app-note>
-  Hier finden Sie in Kürze ein Kontaktformular, um uns eine Nachricht zu schreiben.
-  In der Zwischenzeit können Sie uns gerne per E-Mail oder auf Instagram schreiben.
-</app-note>
+<ng-container *unlessFlag="'CONTACT_FORM'">
+  <app-note>
+    Hier finden Sie in Kürze ein Kontaktformular, um uns eine Nachricht zu schreiben.
+    In der Zwischenzeit können Sie uns gerne per E-Mail oder auf Instagram schreiben.
+  </app-note>
 
-<div class="contact-table-wrapper">
-  <table class="contact-table">
-    <tbody>
-    <tr>
-      <td>E-Mail</td>
-      <td><a href="mailto:info@kicherkrabbe.com">info&commat;kicherkrabbe.com</a></td>
-    </tr>
-    <tr>
-      <td>Instagram</td>
-      <td><a href="https://www.instagram.com/kicherkrabbe" target="_blank">&#64;kicherkrabbe</a></td>
-    </tr>
-    <tr>
-      <td>Telefon</td>
-      <td>+49 176 4321 0815</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+  <div class="contact-table-wrapper">
+    <table class="contact-table">
+      <tbody>
+      <tr>
+        <td>E-Mail</td>
+        <td><a href="mailto:info@kicherkrabbe.com">info&commat;kicherkrabbe.com</a></td>
+      </tr>
+      <tr>
+        <td>Instagram</td>
+        <td><a href="https://www.instagram.com/kicherkrabbe" target="_blank">&#64;kicherkrabbe</a></td>
+      </tr>
+      <tr>
+        <td>Telefon</td>
+        <td>+49 176 4321 0815</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 
-<p style="text-align: center">
-  Wir freuen uns auf Ihre Anfrage!
-</p>
+  <p style="text-align: center">
+    Wir freuen uns auf Ihre Anfrage!
+  </p>
+</ng-container>
 
-
+<ng-container *flag="'CONTACT_FORM'">
+  <app-contact-form *flag="'CONTACT_FORM'"></app-contact-form>
+</ng-container>
