Added submit button to contact form

--- a/frontend/src/app/modules/contact/components/contact-form/contact-form.component.scss
+++ b/frontend/src/app/modules/contact/components/contact-form/contact-form.component.scss
@@ -44,3 +44,10 @@ label {
 .error {
   color: var(--red);
 }
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  justify-content: flex-end;
+}
