--- a/frontend/src/app/modules/contact/components/contact-form/contact-form.component.html
+++ b/frontend/src/app/modules/contact/components/contact-form/contact-form.component.html
@@ -6,7 +6,7 @@
         {{ nameLength$ | async }} / 200
       </span>
     </label>
-    <input #name type="text" id="name" name="name" (input)="updateName(name.value)">
+    <input #name type="text" id="name" name="name" [disabled]="nameDisabled$ | async" (input)="updateName(name.value)">
 
     @if (nameTouched$ | async) {
       @if (nameMissing$ | async) {
@@ -24,7 +24,13 @@
         {{ mailLength$ | async }} / 200
       </span>
     </label>
-    <input #mail type="email" id="mail" name="mail" required (input)="updateMail(mail.value, mail.checkValidity())">
+    <input #mail
+           type="email"
+           id="mail"
+           name="mail"
+           required
+           [disabled]="mailDisabled$ | async"
+           (input)="updateMail(mail.value, mail.checkValidity())">
 
     @if (mailTouched$ | async) {
       @if (mailMissing$ | async) {
@@ -44,7 +50,12 @@
         {{ phoneLength$ | async }} / 100
       </span>
     </label>
-    <input #phone type="tel" id="phone" name="phone" required (input)="updatePhone(phone.value)">
+    <input #phone
+           type="tel"
+           id="phone"
+           name="phone"
+           [disabled]="phoneDisabled$ | async"
+           (input)="updatePhone(phone.value)">
 
     @if (phoneTouched$ | async) {
       @if (phoneTooLong$ | async) {
@@ -60,7 +71,12 @@
         {{ subjectLength$ | async }} / 200
       </span>
     </label>
-    <input #subject type="text" id="subject" name="subject" (input)="updateSubject(subject.value)">
+    <input #subject
+           type="text"
+           id="subject"
+           name="subject"
+           [disabled]="subjectDisabled$ | async"
+           (input)="updateSubject(subject.value)">
 
     @if (subjectTouched$ | async) {
       @if (subjectMissing$ | async) {
@@ -95,4 +111,6 @@
   </div>
 </div>
 
-<!-- TODO Actions -->
+<div class="actions">
+  <app-button color="primary" (click)="submit()" [disabled]="cannotSubmit$ | async">Absenden</app-button>
+</div>
