--- a/frontend/src/app/modules/contact/components/contact-form/contact-form.component.scss
+++ b/frontend/src/app/modules/contact/components/contact-form/contact-form.component.scss
@@ -51,3 +51,9 @@ label {
   gap: 8px;
   justify-content: flex-end;
 }
+
+.loading-button-text {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
