Started adding mailbox admin interface

--- a/frontend/src/app/modules/admin/pages/dashboard/dashboard.page.html
+++ b/frontend/src/app/modules/admin/pages/dashboard/dashboard.page.html
@@ -2,11 +2,11 @@
 
 <ng-container *flag="'CONTACT_FORM'">
   <ul class="cards">
-    <a routerLink="inquiries">
+    <a routerLink="mailbox">
       <li>
-        <label>Kontaktanfragen</label>
+        <label>Postfach</label>
         <p>
-          Es sind <strong>3</strong> neue Kontaktanfragen eingegangen.
+          Du hast <strong>3</strong> neue Nachrichten.
           <!-- TODO Load from backend (dashboard domain?) -->
         </p>
       </li>
