--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -8,6 +8,9 @@
   --primary-3: #66CC99;
   --primary-3-rgb: 102, 204, 153;
 
+  --yellow: #FFD166;
+  --yellow-rgb: 255, 209, 102;
+
   --mobile-breakpoint: 1000px;
 
   &.dark {
