Added inquiries admin page

--- a/frontend/src/app/modules/shared/components/checkbox/checkbox.component.html
+++ b/frontend/src/app/modules/shared/components/checkbox/checkbox.component.html
@@ -1,4 +1,8 @@
-<input [id]="id" [checked]="isChecked() | async" (click)="onCheckboxClicked($event)" type="checkbox">
+<input [id]="id"
+       [checked]="checked$ | async"
+       [disabled]="disabled$ | async"
+       (click)="onCheckboxClicked($event)"
+       type="checkbox">
 @if (getLabel() | async; as label) {
   <label [for]="id">{{ label }}</label><br>
 }
