--- a/frontend/src/app/modules/shared/components/checkbox/checkbox.component.scss
+++ b/frontend/src/app/modules/shared/components/checkbox/checkbox.component.scss
@@ -36,4 +36,8 @@ input[type="checkbox"] {
   &:hover {
     background-color: var(--background-low-contrast);
   }
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
