--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -6,6 +6,16 @@
 
 <h1>Willkommen bei Kicherkrabbe!</h1>
 
+<div class="news">
+  <app-note level="highlight">
+    <p>
+      <strong>Du willst meine Werke live sehen?</strong>
+      Du findest mich am 13. - 15. Dezember auf dem Weihnachtsmarkt Taufkirchen (Vils).
+      Außerdem sind meine Werke ganzjährig im Kunsthandwerk Dorfen ausgestellt.
+    </p>
+  </app-note>
+</div>
+
 <div class="column-layout">
   <div class="left">
     <p>
