Start page note changes

--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -10,7 +10,7 @@
   <app-note level="info">
     <p>
       <strong>Du willst meine Werke live sehen?</strong>
-      Sie sind ganzjährig im Kunsthandwerk Dorfen ausgestellt!<br>
+      Einige davon sind ganzjährig im Kunsthandwerk Dorfen ausgestellt und werden regelmäßig ausgetauscht!<br>
       Sollte ich wieder auf einem Markt vertreten sein, findest du hier die Termine zuerst.
     </p>
   </app-note>
