--- a/frontend/src/app/modules/contact/pages/contact/contact.page.html
+++ b/frontend/src/app/modules/contact/pages/contact/contact.page.html
@@ -1,41 +1,43 @@
 <h1>Kontakt</h1>
 
-<ng-container *unlessFlag="'CONTACT_FORM'">
-  <app-note>
-    Hier finden Sie in Kürze ein Kontaktformular, um uns eine Nachricht zu schreiben.
-    In der Zwischenzeit können Sie uns gerne per E-Mail oder auf Instagram schreiben.
-  </app-note>
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
 
-  <div class="contact-table-wrapper">
-    <table class="contact-table">
-      <tbody>
-      <tr>
-        <td>E-Mail</td>
-        <td><a href="mailto:info@kicherkrabbe.com">info&commat;kicherkrabbe.com</a></td>
-      </tr>
-      <tr>
-        <td>Instagram</td>
-        <td><a href="https://www.instagram.com/kicherkrabbe" target="_blank">&#64;kicherkrabbe</a></td>
-      </tr>
-      <tr>
-        <td>Telefon</td>
-        <td>+49 176 4321 0815</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+@if (loadedInquiriesStatus$ | async) {
+  @if (inquiriesEnabled$ | async) {
+    <app-contact-form (submitted)="sendMessage($event)"></app-contact-form>
 
-  <p style="text-align: center">
-    Wir freuen uns auf Ihre Anfrage!
-  </p>
-</ng-container>
-
-<ng-container *flag="'CONTACT_FORM'">
-  <app-contact-form *flag="'CONTACT_FORM'" (submitted)="sendMessage($event)"></app-contact-form>
-
-  @if (sendingFailed$ | async) {
-    <app-note level="error">
-      Beim Senden Ihrer Nachricht ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.
+    @if (sendingFailed$ | async) {
+      <app-note level="error">
+        Beim Senden Ihrer Nachricht ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.
+      </app-note>
+    }
+  } @else {
+    <app-note>
+      Das Kontaktformular ist derzeit deaktiviert.
+      In der Zwischenzeit können Sie uns gerne per E-Mail oder auf Instagram schreiben.
     </app-note>
+
+    <div class="contact-table-wrapper">
+      <table class="contact-table">
+        <tbody>
+        <tr>
+          <td>E-Mail</td>
+          <td><a href="mailto:info@kicherkrabbe.com">info&commat;kicherkrabbe.com</a></td>
+        </tr>
+        <tr>
+          <td>Instagram</td>
+          <td><a href="https://www.instagram.com/kicherkrabbe" target="_blank">&#64;kicherkrabbe</a></td>
+        </tr>
+        <tr>
+          <td>Telefon</td>
+          <td>+49 176 4321 0815</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <p style="text-align: center">
+      Wir freuen uns auf Ihre Anfrage!
+    </p>
   }
-</ng-container>
+}
